# binius

./: .clippy.toml  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .rustfmt.toml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  README_1BIT_OPTIMIZATION.md  binius.code-workspace  gkr_exp_tracing.perfetto-trace  lookups_tracing.perfetto-trace  run_aarch64_benchmark.sh  rust-toolchain.toml
crates/backend_provider/: Cargo.toml
crates/backend_provider/src/: lib.rs
crates/circuits/: Cargo.toml
crates/circuits/src/: bitwise.rs  blake3.rs  builder.rs  collatz.rs  groestl.rs  helpers.rs  keccakf.rs  keccakf_wide.rs  lasso.rs  lib.rs  pack.rs  plain_lookup.rs  sha256.rs  step_down.rs  transparent.rs  u32add.rs  u32fib.rs  unconstrained.rs  vision.rs
crates/circuits/tests/: composite.rs
crates/compute/: Cargo.toml
crates/compute/src/: alloc.rs  layer.rs  lib.rs  memory.rs  ops.rs  tower.rs
crates/compute/test_utils/: Cargo.toml
crates/compute/tests/: layer.rs
crates/compute_test_utils/: Cargo.toml
crates/compute_test_utils/src/: bivariate_sumcheck.rs  layer.rs  lib.rs  piop.rs  ring_switch.rs
crates/core/: Cargo.toml
crates/core/benches/: additive_ntt.rs  arith_circuit_poly.rs  binary_merkle_tree.rs  composition_poly.rs  gkr_gpa.rs  gkr_prodcheck.rs  hash.rs  high_to_low_sumcheck.rs  multilinear_query.rs  poly_commit.rs  prodcheck.rs  sumcheck.rs  util.rs  zerocheck.rs
crates/core/src/: bit_optimized_zerocheck.rs  bit_packed_mle.rs  challenger.rs  lib.rs  linear_code.rs  tensor_algebra.rs  tower.rs  witness.rs
crates/core/test_utils/: Cargo.toml
crates/core/tests/: bivariate_sumcheck.rs  piop.rs  ring_switch.rs
crates/examples/: Cargo.toml
crates/examples/src/: keccakf.rs  lib.rs  u32_add.rs
crates/fast_compute/: Cargo.toml
crates/fast_compute/src/: arith_circuit.rs  fri.rs  layer.rs  lib.rs  memory.rs
crates/fast_compute/tests/: layer.rs
crates/fast_compute_math/: Cargo.toml
crates/fast_compute_math/src/: error.rs  lib.rs  tensor_prod_eq_ind.rs
crates/field/: Cargo.toml
crates/field/benches/: binary_field.rs  binary_field_packed.rs  binary_field_util.rs  bit_sliced.rs  byte_iteration.rs  byte_sliced.rs  main_field_binary_ops.rs  main_field_unary_ops.rs  packed_binary_field_arithmetic.rs  packed_binary_field_element_access.rs  packed_extension_mul.rs  packed_field_affine_transform.rs  packed_field_dot_product.rs  packed_field_element_access.rs  packed_field_init.rs  packed_field_invert.rs  packed_field_iter.rs  packed_field_linear_transform.rs  packed_field_mul_alpha.rs  packed_field_multiply.rs  packed_field_slice_iter.rs  packed_field_spread.rs  packed_field_square.rs  packed_field_subfield_ops.rs  packed_field_utils.rs  polyval_packed.rs
crates/field/src/: aes_field.rs  affine_transformation.rs  arithmetic_traits.rs  as_packed_field.rs  binary_field.rs  binary_field_arithmetic.rs  byte_iteration.rs  canonical_serialization.rs  error.rs  extension.rs  field.rs  lib.rs  linear_transformation.rs  macros.rs  packed.rs  packed_aes_field.rs  packed_binary_field.rs  packed_extension.rs  packed_extension_ops.rs  packed_polyval.rs  parallel_ops.rs  polyval.rs  scalars_collection.rs  single_packed.rs  tests.rs  tower.rs  tower_levels.rs  tracing.rs  transpose.rs  underlier.rs  util.rs
crates/hal/: Cargo.toml
crates/hal/src/: backend.rs  common.rs  cpu.rs  cpu_fast.rs  eq_ind_reducer.rs  error.rs  immutable_slice.rs  lib.rs  linerate.rs  mle_adapters.rs  multilinear.rs  multilinear_extension.rs  multilinear_query.rs  packing_deref.rs  sumcheck_evaluator.rs  sumcheck_folding.rs  sumcheck_multilinear.rs  sumcheck_round_calculation.rs  sumcheck_round_calculator.rs  tensor_product.rs  utils.rs  v2.rs  v2_cpu.rs  zerocheck.rs
crates/hash/: Cargo.toml
crates/hash/benches/: hash.rs
crates/hash/src/: compression.rs  groestl.rs  hasher.rs  lib.rs  multi_digest.rs  parallel_digest.rs  permutation.rs  serialization.rs  sha2.rs  vision.rs  vision_constants.rs
crates/hash/tests/: integration_tests.rs
crates/m3/: Cargo.toml
crates/m3/src/: builder.rs  collatz.rs  collatz_high_level.rs  constraint_system.rs  emulate.rs  error.rs  lib.rs  types.rs  u32.rs  witness.rs
crates/m3/tests/: collatz.rs  computed.rs  fibonacci.rs  flush_multiple_selectors.rs  groestl_hash.rs  merkle_tree.rs  mul_div_tests.rs  signed_mul.rs  squared.rs
crates/macros/: Cargo.toml
crates/macros/src/: arith_circuit_poly.rs  arith_expr.rs  composition_poly.rs  deserialize_bytes.rs  lib.rs
crates/macros/tests/: arithmetic_circuit.rs  composition_poly.rs
crates/math/: Cargo.toml
crates/math/benches/: fold.rs  tensor_prod_eq_ind.rs
crates/math/src/: arith_expr.rs  binary_subspace.rs  composition_poly.rs  deinterleave.rs  error.rs  evaluation_order.rs  fold.rs  lib.rs  matrix.rs  mle_adapters.rs  multilinear.rs  multilinear_extension.rs  multilinear_query.rs  packing_deref.rs  piecewise_multilinear.rs  rows_batch.rs  tensor_prod_eq_ind.rs  tower.rs  univariate.rs
crates/maybe_rayon/: Cargo.toml
crates/maybe_rayon/src/: lib.rs
crates/ntt/: Cargo.toml
crates/ntt/benches/: additive_ntt.rs  large_transform.rs
crates/ntt/src/: additive_ntt.rs  dynamic_dispatch.rs  error.rs  fri.rs  lib.rs  (+6 more)
crates/utils/: Cargo.toml
examples/: Cargo.toml  README.md  acc-linear-combination.rs  b32_mul.rs  bitwise_and_proof.rs  bitwise_ops.rs  blake3_circuit.rs  collatz.rs  composite.rs  composite_bug.rs  groestl.rs  groestl_circuit.rs  groestl_circuit.rs.disabled  keccak.rs  keccak_lookups.rs  keccakf.rs  keccakf_circuit.rs  keccakf_small_field.rs  keccakf_v2.rs  keccakf_wide.rs  lasso.rs  merkle_tree.rs  modular_mul.rs  sha256.rs  sha256_circuit.rs  sha256_circuit_with_lookup.rs  u16_gkr_static_exp.rs  u16_lookups_static_exp.rs  u32_add.rs  u32_add_gadget.rs  u32_gkr_static_exp.rs  u32_lookups_static_exp.rs  u32_mul.rs  u32_mul_gkr.rs  u32_mul_gkr_exp_lookups.rs  u32add.rs  u32add_lasso.rs  u32add_v2.rs  u32add_with_lookup.rs  u32fib.rs  (+5 more)
examples/benches/: additive_ntt.rs  big_field_sumcheck.rs  binary_zerocheck.rs  simple_bit_optimization.rs
(+767 files in other folders)
