[package]
name = "binius_circuits"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
binius_core = { path = "../core" }
binius_field = { path = "../field" }
binius_hash = { path = "../hash" }
binius_macros = { path = "../macros" }
binius_math = { path = "../math" }
binius_maybe_rayon = { path = "../maybe_rayon", default-features = false }
binius_utils = { path = "../utils", default-features = false }
anyhow.workspace = true
alloy-primitives.workspace = true
bytemuck.workspace = true
itertools.workspace = true
rand = { workspace = true, features = ["std"] }
tiny-keccak.workspace = true
tracing.workspace = true
bumpalo.workspace = true

[dev-dependencies]
binius_hal = { path = "../hal" }
groestl_crypto = { package = "groestl", version = "0.10.1" }
sha2 = { version = "0.10.8", features = ["compress"] }