[package]
name = "binius_circuits"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius_core = { path = "../core", default-features = false }
binius_field = { path = "../field", default-features = false }
binius_hash = { path = "../hash", default-features = false }
binius_math = { path = "../math", default-features = false }
binius_maybe_rayon = { path = "../maybe_rayon", default-features = false }
binius_utils = { path = "../utils", default-features = false }
anyhow.workspace = true
alloy-primitives.workspace = true
array-util.workspace = true
bytemuck.workspace = true
itertools.workspace = true
rand = { workspace = true, features = ["std"] }
tiny-keccak.workspace = true
tracing.workspace = true
bumpalo.workspace = true

[dev-dependencies]
binius_fast_compute = { path = "../fast_compute", default-features = false }
binius_hal = { path = "../hal", default-features = false }
sha2 = { version = "0.10.8", features = ["compress"] }

[features]
default = ["nightly_features"]
nightly_features = [
    "binius_core/nightly_features",
    "binius_hal/nightly_features",
    "binius_math/nightly_features",
]
