[package]
name = "binius_compute"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius_field = { path = "../field", default-features = false }
binius_ntt = { path = "../ntt", default-features = false }
binius_math = { path = "../math", default-features = false }
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
rand = { workspace = true, features = ["std"] }
