[package]
name = "binius_compute"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius_field = { path = "../field", default-features = false }
binius_ntt = { path = "../ntt", default-features = false }
binius_math = { path = "../math", default-features = false }
binius_utils = { path = "../utils", default-features = false }
bytemuck.workspace = true
either.workspace = true
itertools.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
binius_compute_test_utils ={ path = "../compute_test_utils", default-features = false }
rand = { workspace = true, features = ["std"] }
