[package]
name = "binius_fast_compute"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius_field = { path = "../field", default-features = false }
binius_compute = { path = "../compute", default-features = false }
bytemuck = { workspace = true, features = ["extern_crate_alloc"] }

[dev-dependencies]
rand = { workspace = true, features = ["std"] }
