[package]
name = "binius_fast_compute"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius_field = { path = "../field", default-features = false }
binius_compute = { path = "../compute", default-features = false }
binius_math = { path = "../math", default-features = false }
binius_maybe_rayon = { path = "../maybe_rayon", default-features = false }
binius_ntt = { path = "../ntt", default-features = false }
binius_utils = { path = "../utils", default-features = false }
bytemuck = { workspace = true, features = ["extern_crate_alloc"] }
bytes = { workspace = true }
itertools = { workspace = true }
stackalloc = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
binius_compute_test_utils = { path = "../compute_test_utils", default-features = false }
rand = { workspace = true, features = ["std"] }
