[package]
name = "binius_fast_compute_math"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius_field = { path = "../field", default-features = false }
binius_compute = { path = "../compute", default-features = false }
binius_math = { path = "../math", default-features = false }
bytemuck = { workspace = true, features = ["extern_crate_alloc"] }
binius_utils = { path = "../utils", default-features = false }
thiserror.workspace = true

[dev-dependencies]
binius_fast_compute = { path = "../fast_compute", default-features = false }