[package]
name = "binius_hal"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
auto_impl.workspace = true
binius_field = { path = "../field" }
binius_math = { path = "../math" }
binius_utils = { path = "../utils" }
bytemuck.workspace = true
itertools.workspace = true
p3-util.workspace = true
rand.workspace = true
rayon.workspace = true
stackalloc.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rand = { workspace = true, features = ["std_rng"] }
