[package]
name = "binius_hal"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
auto_impl.workspace = true
binius_field = { path = "../field" }
binius_math = { path = "../math" }
binius_maybe_rayon = { path = "../maybe_rayon", default-features = false }
binius_utils = { path = "../utils", default-features = false }
bytemuck.workspace = true
itertools.workspace = true
rand.workspace = true
stackalloc.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rand = { workspace = true, features = ["std_rng"] }
