[package]
name = "binius_hal"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius_field = { path = "../field", default-features = false }
binius_math = { path = "../math", default-features = false }
binius_maybe_rayon = { path = "../maybe_rayon", default-features = false }
binius_utils = { path = "../utils", default-features = false }
bytemuck.workspace = true
itertools.workspace = true
stackalloc.workspace = true
thiserror.workspace = true
tracing.workspace = true

[features]
default = ["nightly_features"]
nightly_features = [
    "binius_field/nightly_features",
    "binius_math/nightly_features",
]
