[package]
name = "binius_hash"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
binius_field = { path = "../field" }
binius_utils = { path = "../utils" }
binius_ntt = { path = "../ntt" }
bytemuck.workspace = true
bytes.workspace = true
cfg-if.workspace = true
digest.workspace = true
groestl_crypto.workspace = true
lazy_static.workspace = true
sha2 = { workspace = true, features = ["compress"] }
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
hex-literal.workspace = true
rand.workspace = true

[features]
stable_only = ["binius_utils/stable_only", "binius_field/stable_only"]

[lib]
bench = false

[[bench]]
name = "hash"
harness = false
