[package]
name = "binius_m3"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
array-util.workspace = true
binius_core = { path = "../core", default-features = false }
binius_field = { path = "../field", default-features = false }
binius_compute = { path = "../compute", default-features = false }
binius_fast_compute = { path = "../fast_compute", default-features = false }
binius_hal = { path = "../hal", default-features = false, optional = true }
binius_hash = { path = "../hash", default-features = false, optional = true }
binius_math = { path = "../math", default-features = false }
binius_maybe_rayon = { path = "../maybe_rayon", default-features = false }
binius_utils = { path = "../utils", default-features = false }
bumpalo.workspace = true
bytemuck.workspace = true
derive_more.workspace = true
either.workspace = true
getset.workspace = true
itertools.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
binius_m3 = { path = ".", default-features = false, features = ["test_utils"] }
digest.workspace = true
rand.workspace = true

[features]
default = ["nightly_features"]
test_utils = ["binius_hal", "binius_hash"]
nightly_features = [
    "binius_core/nightly_features",
    "binius_hal/nightly_features",
]
